# constella-platform

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bootstrap_seed/backups/: nas-backup-manifest.json
bootstrap_seed/manifests/: compatibility-shims.json  install-bundle.json  migration-matrix.json  repo-classes.json  surface-inventory.json
bootstrap_seed/profiles/: bootstrap.json  dev.json  ops.json  runtime-only.json
docs/: bootstrap-verification-report-template.md  multi-machine-bootstrap.md  public-ci-unblock.md  release-prep.md  second-machine-quickstart.md
scripts/: bootstrap_constellar.py  bootstrap_verify_and_render.py  check_github_workflow_scope.py  post_bootstrap_issue_comment.py  publish_public_ci.py  render_bootstrap_issue_comment.py
src/constella_platform/: __init__.py  __main__.py  api.py  capability_registry.py  cli.py  gui.py  models.py  operator_views.py  parity.py  release_prep.py  service.py  store.py  tui.py  workflow_packs.py
tests/: test_agenthive_domain.py  test_agenthive_orbit_integration.py  test_api.py  test_aria_runtime_domain.py  test_bootstrap_issue_comment.py  test_bootstrap_seed.py  test_bootstrap_verify_helper.py  test_capability_core.py  test_cli.py  test_github_workflow_scope_check.py  test_gui.py  test_orbit_domain.py  test_parity.py  test_post_bootstrap_issue_comment.py  test_publish_public_ci.py  test_release_prep.py  test_tui.py  test_workflow_governance.py  test_write_capabilities.py
(+5 files in other folders)
